Fixed Lombok JDK17 compatibility issue